[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "esctl"
version = "1.11.1"
description = "Easy to use CLI tool to manage Elasticsearch, preventing long curl commands"
keywords = ["elasticsearch", "es", "cli"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
    "Topic :: System :: Shells",
]
requires-python = ">=3.10"
authors = [
  {name = "Jérôme Pin", email = "jeromepin@users.noreply.github.com"}
]
maintainers = [
  {name = "Jérôme Pin", email = "jeromepin@users.noreply.github.com"}
]
dependencies = [
    "cerberus>=1.3.5",
    "certifi>=2024.8.30",
    "cliff==3.2",
    "elasticsearch==8.*",
    "jmespath>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/jeromepin/esctl"
Repository = "https://github.com/jeromepin/esctl"

[project.entry-points.console_scripts]
esctl = "esctl.main:main"

[project.entry-points.esctl]
"alias list" = "esctl.cmd.alias:AliasList"
"cat allocation" = "esctl.cmd.cat:CatAllocation"
"cat plugins" = "esctl.cmd.cat:CatPlugins"
"cat shards" = "esctl.cmd.cat:CatShards"
"cat thread-pool" = "esctl.cmd.cat:CatThreadpool"
"cat templates" = "esctl.cmd.cat:CatTemplates"
"cluster allocation explain" = "esctl.cmd.cluster:ClusterAllocationExplain"
"cluster health" = "esctl.cmd.cluster:ClusterHealth"
"cluster info" = "esctl.cmd.cluster:ClusterInfo"
"cluster routing allocation enable" = "esctl.cmd.cluster:ClusterRoutingAllocationEnable"
"cluster stats" = "esctl.cmd.cluster:ClusterStats"
"cluster settings list" = "esctl.cmd.settings:ClusterSettingsList"
"cluster settings get" = "esctl.cmd.settings:ClusterSettingsGet"
"cluster settings reset" = "esctl.cmd.settings:ClusterSettingsReset"
"cluster settings set" = "esctl.cmd.settings:ClusterSettingsSet"
"config cluster list" = "esctl.cmd.config:ConfigClusterList"
"config context list" = "esctl.cmd.config:ConfigContextList"
"config context set" = "esctl.cmd.config:ConfigContextSet"
"config show" = "esctl.cmd.config:ConfigShow"
"config user list" = "esctl.cmd.config:ConfigUserList"
"document get" = "esctl.cmd.document:DocumentGet"
"index close" = "esctl.cmd.index:IndexClose"
"index create" = "esctl.cmd.index:IndexCreate"
"index delete" = "esctl.cmd.index:IndexDelete"
"index list" = "esctl.cmd.index:IndexList"
"index open" = "esctl.cmd.index:IndexOpen"
"index reindex" = "esctl.cmd.index:IndexReindex"
"index settings get" = "esctl.cmd.settings:IndexSettingsGet"
"index settings list" = "esctl.cmd.settings:IndexSettingsList"
"index settings set" = "esctl.cmd.settings:IndexSettingsSet"
"logging get" = "esctl.cmd.logging:LoggingGet"
"logging reset" = "esctl.cmd.logging:LoggingReset"
"logging set" = "esctl.cmd.logging:LoggingSet"
"migration deprecations" = "esctl.cmd.migration:MigrationDeprecations"
"node exclude" = "esctl.cmd.node:NodeExclude"
"node hot-threads" = "esctl.cmd.node:NodeHotThreads"
"node list" = "esctl.cmd.node:NodeList"
"node stats" = "esctl.cmd.node:NodeStats"
"raw" = "esctl.cmd.raw:RawCommand"
"repository list" = "esctl.cmd.repository:RepositoryList"
"repository show" = "esctl.cmd.repository:RepositoryShow"
"repository verify" = "esctl.cmd.repository:RepositoryVerify"
"roles get" = "esctl.cmd.roles:SecurityRolesGet"
"snapshot list" = "esctl.cmd.snapshot:SnapshotList"
"task list" = "esctl.cmd.task:TaskList"
"users get" = "esctl.cmd.users:SecurityUsersGet"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pipx>=1.7.1",
    "pre-commit>=4.0.1",
    "pytest-clarity>=1.0.1",
    "pytest-icdiff>=0.9",
    "pytest>=8.3.4",
    "pyupgrade>=3.19.0",
    "ruff>=0.8.3",
    "setuptools>=75.6.0",
]

[[index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
